# TdyLib

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: cameralib-debug.aar
app/src/androidTest/java/com/example/tdylib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/jni/DetectionBasedTracker/: CMakeLists.txt  DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
app/src/main/cpp/jni/FindFeatures/: CMakeLists.txt  FindFeatures_jni.cpp
app/src/main/java/com/example/tdylib/: Camera1Activity.java  MainActivity.java  OpencvSamplesActivity.java
app/src/main/java/com/example/tdylib/camera1/: Camera1Activity.java  Camera1Helper.java
app/src/main/java/com/example/tdylib/listener/: CameraListener.java
app/src/main/java/com/example/tdylib/opencv/: OpencvCameraCalibrationActivity.java  OpencvColorBlobDetectionActivity.java  OpencvFaceDetectionActivity.java  OpencvImageManipulationsActivity.java  OpencvPuzzle15Activity.java  OpencvSamplesActivity.java  OpencvTutorial1CamerapreviewActivity.java  OpencvTutorial2MixedprocessingActivity.java  OpencvTutorial3CameracontrolActivity.java  Puzzle15Processor.java
app/src/main/java/com/example/tdylib/opencv/camera_calibration/: CalibrationResult.java  CameraCalibrator.java  OnCameraFrameRender.java  OpencvCameraCalibrationActivity.java
app/src/main/java/com/example/tdylib/opencv/cameracalibration/: CalibrationResult.java  CameraCalibrator.java  OnCameraFrameRender.java  OpencvCameraCalibrationActivity.java
app/src/main/java/com/example/tdylib/opencv/colorblobdetect/: ColorBlobDetector.java  OpencvColorBlobDetectionActivity.java
app/src/main/java/com/example/tdylib/opencv/facedetect/: DetectionBasedTracker.java  OpencvFaceDetectionActivity.java
app/src/main/java/com/example/tdylib/opencv/imagemanipulations/: OpencvImageManipulationsActivity.java
app/src/main/java/com/example/tdylib/opencv/puzzle15/: OpencvPuzzle15Activity.java  Puzzle15Processor.java
app/src/main/java/com/example/tdylib/opencv/tutorial1/: OpencvTutorial1CamerapreviewActivity.java
app/src/main/java/com/example/tdylib/opencv/tutorial2/: OpencvTutorial2MixedprocessingActivity.java
app/src/main/java/com/example/tdylib/opencv/tutorial3/: OpencvTutorial3CameracontrolActivity.java  Tutorial3View.java
app/src/main/java/com/example/tdylib/view/: AutoFitTextureView.java
app/src/main/res/layout/: activity_camera1.xml  activity_main.xml  activity_opencv_camera_calibration.xml  activity_opencv_color_blob_detection.xml  activity_opencv_face_detection.xml  activity_opencv_image_manipulations.xml  activity_opencv_puzzle15.xml  activity_opencv_samples.xml  activity_opencv_tutorial1_camerapreview.xml  activity_opencv_tutorial2_mixedprocessing.xml  activity_opencv_tutorial3_cameracontrol.xml
app/src/main/res/menu/: calibration.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/tdylib/: ExampleUnitTest.java
cameralib/: build.gradle
cameralib/src/main/: AndroidManifest.xml
cameralib/src/main/java/com/example/cameralib/: ImageUtil.java  MyLogUtil.java
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: VideoRecorder.cpp  ffmpeg.cpp
ffmpeg/src/main/java/com/tdy/ffmpeg/: NativeLib.java  VideoRecordParams.java
gradle/wrapper/: gradle-wrapper.properties
opencv430/src/androidTest/java/com/example/opencv430/: ExampleInstrumentedTest.java
opencv430/src/main/: AndroidManifest.xml
opencv430/src/main/java/org.opencv/android/: AsyncServiceHelper.java  CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java  OpenCVLoader.java
opencv430/src/main/java/org/opencv/android/: CameraActivity.java  CameraBridgeViewBase.java
opencv430/src/test/java/com/example/opencv430/: ExampleUnitTest.java
yuvlib/src/androidTest/java/com/example/yuvlib/: ExampleInstrumentedTest.java
yuvlib/src/main/: AndroidManifest.xml
yuvlib/src/main/cpp/: CMakeLists.txt  YuvConvert.cpp  YuvConvert.h  YuvJni.cpp  YuvJni.h  yuvlib.cpp
yuvlib/src/main/java/com/example/yuvlib/: YUVUtil.java
yuvlib/src/test/java/com/example/yuvlib/: ExampleUnitTest.java
(+5 files in other folders)
